templates/site.css
/* CSS reset: https://meyerweb.com/eric/tools/css/reset/ */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}


/* Layout and typography */
body {
  direction: rtl;
  font-family: 'Noto Naskh Arabic', 'Segoe UI', Tahoma, Arial, sans-serif;
  font-size: 17px;
  line-height: 28px;
  text-align: right;
}
em {
  font-style: italic;
}
h2 {
  font-size: 32px;
  line-height: 48px;
  margin-top: 40px;
}
h2 a {
  text-decoration: none;
}
div.example {
  width: 995px;
  max-width: calc(100% - 24px);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 120px;
}
div.example table {
  direction: ltr;
  margin-top: 15px;
  margin-bottom: 20px;
  width: 100%;
}
p.next {
  margin-bottom: 20px;
}
p.footer {
  font-size: 75%;
}
div#intro {
  width: 420px;
  min-width: 0;
  max-width: calc(100% - 24px);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 120px;
}
div#intro p {
  padding-top: 20px;
}
div#intro ul {
  padding-top: 20px;
}
table td {
  border: 0;
  outline: 0;
}
td.docs {
  box-sizing: border-box;
  direction: rtl;
  width: 420px;
  max-width: 420px;
  min-width: 420px;
  min-height: 5px;
  vertical-align: top;
  text-align: right;
}
td.docs p {
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 15px;
}
td.code {
  box-sizing: border-box;
  direction: ltr;
  width: 575px;
  max-width: 575px;
  min-width: 575px;
  padding-top: 5px;
  padding-right: 5px;
  padding-left: 5px;
  padding-bottom: 5px;
  text-align: left;
  unicode-bidi: isolate;
  vertical-align: top;
}
td.code.leading {
  padding-bottom: 11px;
}
pre, code {
  direction: ltr;
  font-size: 14px; line-height: 18px;
  font-family: 'Menlo', 'Monaco', 'Consolas', 'Lucida Console', monospace;
  text-align: left;
  unicode-bidi: isolate;
}
a.run, button.copy {
  align-items: center;
  background: transparent;
  border: 0;
  display: inline-flex;
  float: right;
  justify-content: center;
  padding: 0;
}
a.run img, button.copy img {
  height: 16px;
  width: 16px;
}
a.run, button.copy {
  cursor: pointer;
}
button.copy {
  margin-left: 0;
  margin-right: 4px;
}
a.run:focus-visible, button.copy:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}

@media (max-width: 720px) {
  h2 {
    font-size: 26px;
    line-height: 38px;
  }
  div.example table,
  div.example tbody,
  div.example tr,
  td.docs,
  td.code {
    display: block;
    max-width: 100%;
    min-width: 0;
    width: 100%;
  }
  td.docs p {
    padding-right: 0;
  }
  td.code {
    overflow-x: auto;
  }
}


/* Colors: light mode */
body {
  background-color: #ffffff;
  color: #252519;
}
td.code.empty {
  background: #ffffff;
}
a, a:visited {
  color: #261a3b;
}
p.footer {
  color: #808080;
}
p.footer a, p.footer a:visited {
  color: #808080;
}
td.code {
  background: #f0f0f0;
}

/* Syntax highlighting: light mode */
body .nx { }                 /* Name.Other: package, variable, struct, param, generic type names, etc. */
body .nf { }                 /* Name.Function: function names (def and call) */
body .o  { }                 /* Operator: :=, &, *, +, &&, <, etc. */
body .p  { }                 /* Plain: = , . : [ ( { etc. */
body .k  { color: #954121 }  /* Keyword: if, for, range, return, defer, etc.  */
body .kc { color: #954121 }  /* Keyword.Constant: nil, true, false */
body .kd { color: #954121 }  /* Keyword.Declaration: func, var, type, struct, map, chan, etc. */
body .kn { color: #954121 }  /* Keyword.Namespace: package, import */
body .nb { color: #954121 }  /* Name.Builtin: make, len, delete, append, etc. */
body .kt { color: #b00040 }  /* Keyword.Type: string, int, byte, error, etc. */
body .m  { color: #666666 }  /* Literal.Number */
body .mf { color: #666666 }  /* Literal.Number.Float */
body .mh { color: #666666 }  /* Literal.Number.Hex */
body .mi { color: #666666 }  /* Literal.Number.Integer */
body .mo { color: #666666 }  /* Literal.Number.Oct */
body .s  { color: #219161 }  /* Literal.String */
body .sc { color: #219161 }  /* Literal.String.Char */
body .gp { color: #000080 }  /* Generic.Prompt: shell prompt */
body .go { color: #808080 }  /* Generic.Output: shell output */
body .c1 { color: #808080 }  /* Comment.Single */


@media (prefers-color-scheme: dark) {
  /* Colors: dark mode */
  body {
    background-color: #1f1f1f;
    color: #dadada;
  }
  td.code.empty {
    background: #1f1f1f;
  }
  a, a:visited {
    color: #e4e4e4;
  }
  p.footer {
    color: #898e98;
  }
  p.footer a, p.footer a:visited {
    color: #898e98;
  }
  td.code {
    background: #282828;
  }

 
  /* Syntax highlighting: dark mode */
  body .nx { }                 /* Name.Other */
  body .nf { }                 /* Name.Function */
  body .o  { }                 /* Operator */
  body .p  { }                 /* Plain */
  body .k  { color: #af5a54 }  /* Keyword */
  body .kc { color: #af5a54 }  /* Keyword.Constant */
  body .kd { color: #af5a54 }  /* Keyword.Declaration */
  body .kn { color: #af5a54 }  /* Keyword.Namespace */
  body .nb { color: #af5a54 }  /* Name.Builtin */
  body .kt { color: #b64343 }  /* Keyword.Type */
  body .m  { color: #688ec8 }  /* Literal.Number */
  body .mf { color: #688ec8 }  /* Literal.Number.Float */
  body .mh { color: #688ec8 }  /* Literal.Number.Hex */
  body .mi { color: #688ec8 }  /* Literal.Number.Integer */
  body .mo { color: #688ec8 }  /* Literal.Number.Oct */
  body .s  { color: #718e72 }  /* Literal.String */
  body .sc { color: #718e72 }  /* Literal.String.Char */
  body .gp { color: #8a6ab1 }  /* Generic.Prompt */
  body .go { color: #868686 }  /* Generic.Output */
  body .c1 { color: #868686 }  /* Comment.Single */
}

